# light-raytracer

./: Cargo.toml  LICENSE  README.md
assets/: basic.gltf  roughness_test.gltf
live-renderer/: Cargo.toml
live-renderer/src/: app.rs  camera_controller.rs  main.rs  ui_layer.rs  wgpu_context.rs  widgets.rs
src/: camera.rs  environment.rs  lib.rs
src/geometry/: for_gpu.rs  gltf_loader.rs  mod.rs
src/renderer/: mod.rs
src/renderer/passes/: blit.rs  blit.wgsl  mod.rs  raytracing.rs  raytracing.wgsl
src/renderer/utils/: buffer.rs  mod.rs  texture.rs
