[package]
name = "light-raytracer"
version = "0.1.0"
edition = "2021"

[dependencies]
bytemuck = { version = "1.14", features = ["derive"] }
glam = { version = "0.25", features = ["bytemuck"] }
gltf = { version = "1.4", optional = true }
image = { version = "0.24", optional = true }
log = "0.4"
wgpu = "0.18"

[features]
image = ["dep:image"]
gltf = ["dep:gltf"]

[workspace]
members = ["live-renderer"]
