[package]
name = "live-renderer"
version = "0.1.0"
edition = "2021"

[dependencies]
glam = "0.25"
egui = "0.25"
egui-winit = "0.25"
egui-wgpu = "0.25"
env_logger = "0.11"
image = "0.24"
log = "0.4"
pollster = "0.3"
rfd = "0.13"
wgpu = "0.18"
winit = { version = "0.29", features = ["rwh_05"] }

light-raytracer = { path = "..", features = ["gltf"] }
